# x-monorepo

./: .bazelrc  .gitignore  BUILD  Makefile  README.md  WORKSPACE  go.mod  go.sum
bazel/go/: def.bzl  repos.bzl
bazel/python/: def.bzl  repos.bzl
go/cmd/echo/: BUILD.bazel
go/cmd/hash-api/: BUILD.bazel  main.go
go/cmd/hotel/detail-api/: BUILD.bazel  main.go
protos/: buf.gen.yaml  buf.work.yaml
protos/echo/: BUILD.bazel  echo.proto
protos/hotel/detailapis/detail/v1/: detail.proto
protos/petapis/pet/v1/: pet.proto
python/nyt_bestsellers/: BUILD
rust/blog_os/: Cargo.toml
rust/blog_os/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
rust/blog_os/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
rust/blog_os/tests/: basic_root.rs  heap_allocation.rs
rust/lox/: BUILD  Cargo.toml
rust/lox/src/: allocator.rs  chunk.rs  compiler.rs  function.rs  lib.rs  scanner.rs  token.rs  value.rs  vm.rs
rust/lox/tests/: compiler.rs  lib.rs  scanner.rs  vm.rs
rust/riscv_os/: Cargo.toml  Makefile  build.rs  linker.ld
rust/riscv_os/.cargo/: config.toml
rust/riscv_os/src/: bio.rs  bmap.rs  console.rs  cpu.rs  entry.S  file.rs  fs.rs  kalloc.rs  kernelvec.S  kvm.rs  lib.rs  log.rs  main.rs  page_table.rs  param.rs  plic.rs  printf.rs  proc.rs  process.rs  register.rs  rmain.rs  sleeplock.rs  spinlock.rs  start.rs  superblock.rs  swtch.S  swtch.rs  test.rs  trampoline.S  trap.rs  uart.rs  virtio.rs
rust/riscv_os/src/proc/: elf.rs  syscall.rs
rust/riscv_os/src/register/: clint.rs  mhartid.rs  mie.rs  mscratch.rs  mstatus.rs  pmp.rs  scause.rs  sepc.rs  sie.rs  sip.rs  sstatus.rs  tp.rs
rust/riscv_os/src/vm/: page_table.rs
rust/riscv_os/tests/: heap_allocation.rs
rust/wasm/: BUILD
rust/wasm/src/: exports.rs  func.rs  instance.rs  leb128.rs  lib.rs  module.rs  ops.rs  section.rs  types.rs
scala/greeting/: BUILD
scala/greeting/src/main/scala/app/nitta/x/greeting/: Greeter.scala
scala/greeting/src/test/scala/app/nitta/x/greeting/: GreeterTest.scala
scala/src/main/greeting/: BUILD  Greeter.scala
tools/python/jupyter/: BUILD  jupyter.py  macro.bzl
tools/python/repl/: BUILD  macro.bzl  repl.py
tools/toy/rule/: BUILD  def.bzl  fortune.bzl  hello.cc.tpl  shell.bzl
tools/toy/rules_go_simple/: BUILD  actions.bzl  bin_with_libs.go  go_actions.bzl  list_data_bin.go  list_data_bin_test.sh  rules.bzl
tools/toy/rules_go_simple/baz/: baz.go
tools/toy/rules_go_simple/foo/: foo.go
tools/toy/rules_go_simple/internal/: BUILD  bin_with_libs.go  bin_with_libs_test.sh  hello.go  hello_test.sh  list_data_bin.go  list_data_bin_test.sh  message.go  providers.bzl  rules.bzl
tools/toy/rules_go_simple/internal/bar/: bar.go
tools/toy/rules_go_simple/internal/foo/: foo.go
tools/toy/rules_go_simple/list_data_lib/: list_data_lib.go
