load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "echo",
    srcs = [
        "echo.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "echo_go",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/kazukousen/x-monorepo/protos/echo",
    proto = ":echo",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
    ],
)
