[package]
name = "riscv_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.25"

[dependencies]
bitflags = "1.3.2"
array-macro = "2.1.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
