load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "hash-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/kazukousen/x-monorepo/go/cmd/hash-api",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gorilla_mux//:mux",
        "@org_golang_x_crypto//bcrypt",
    ],
)

go_binary(
    name = "hash-api",
    embed = [":hash-api_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/hash-api"],
    files = [":hash-api"],
    repository = "kazukousen/hash-api",
)
