load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "detail-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/kazukousen/x-monorepo/go/cmd/hotel/detail-api",
    visibility = ["//visibility:private"],
    deps = [
        "//protos/gen/proto/go/detail/v1:detail",
        "//vendor/google.golang.org/grpc",
        "//vendor/google.golang.org/grpc/reflection",
    ],
)

go_binary(
    name = "detail-api",
    embed = [":detail-api_lib"],
    visibility = ["//visibility:public"],
)
